# ParserYC.rs

./: .gitignore  README.md
v1/: LICENSE  README.md  pyproject.toml  requirements.txt
v1/Python_Scraping/: README.md  check_remaining.py  test_pipeline.py  yc_scraper.py
v1/Python_Scraping/job_listings/: __init__.py  scrape_jobs.py
v1/Rust_Processing/: Cargo.toml  README.md  schema.json
v1/Rust_Processing/src/: db.rs  main.rs  pass1.rs  pass2.rs  pass3.rs  pass4.rs  pass5.rs  pass6.rs  pass7.rs  pass8.rs  utils.rs
v1/Sqlite_Database/: README.md  schema.py
v1/XML_Sitemaps/: README.md  launches_sitemap.xml  sitemap_parser.py
v1/pipeline/: README.md  integrated_pipeline.py
v2/: README.md  pyproject.toml  requirements.txt
v2/Python_Scraping/: README.md  check_remaining.py  test_pipeline.py  yc_scraper.py
v2/Python_Scraping/core/: desync_client.py  filters.py  logging.py  models.py  store.py
v2/Python_Scraping/job_listings/: scrape_jobs.py
v2/Python_Scraping/jobs/: cli.py  loader.py  pipeline.py
v2/Python_Scraping/pipeline/: cli.py  coordinator.py
v2/Rust_Processing/: Cargo.toml  README.md  schema.json
v2/Rust_Processing/company_metadata_extraction/: db.rs  main.rs  metrics.rs  passes.rs  text.rs  utils.rs
v2/Rust_Processing/jobs_extraction/: body.rs  db.rs  main.rs  meta.rs  shorten.rs  stats.rs  utils.rs
v2/Sqlite_Database/: README.md  __init__.py  schema.py
v2/XML_Sitemaps/: README.md  cli.py  companies_sitemap.xml  jobs_sitemap.xml  sitemap_parser.py
v2/pipeline/: README.md  integrated_pipeline.py
v3/: Cargo.toml  README.md  stats.md
v3/src/: db.rs  main.rs  scraper.rs  sitemap.rs
v3/src/parser/: blocks.rs  mod.rs  sections.rs
v3/src/parser/extract/: company.rs  founders.rs  jobs.rs  links.rs  meetings.rs  mod.rs  news.rs  partners.rs
v3/tests/fixtures/: doordash.md  groupahead.md  stripe.md
