[package]
name = "yc_scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yc_scraper"
path = "src/main.rs"

[dependencies]
spider-client = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
quick-xml = "0.37"
regex = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
