[package]
name = "yc_processor_v2"
version = "2.0.0"
edition = "2021"
default-run = "company_metadata_extraction"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
itertools = "0.12"
rayon = { version = "1.8", optional = true }

[[bin]]
name = "jobs_extraction"
path = "jobs_extraction/main.rs"

[[bin]]
name = "company_metadata_extraction"
path = "company_metadata_extraction/main.rs"
